# taskforge-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
kubernetes/: namespace.yaml
kubernetes/kafka/: deployment.yaml
kubernetes/task-service/: deployment.yaml
protos/: common.proto  task_service.proto  workflow_service.proto
src/: main.py
src/libs/common/: __init__.py  event_bus.py  observability.py  unit_of_work.py
src/libs/saga_framework/: __init__.py  saga.py  step.py
src/services/task_service/: Dockerfile  __init__.py  main.py
src/services/task_service/domain/: aggregates.py  commands.py  events.py  exceptions.py  value_objects.py
src/services/task_service/infrastructure/: event_store.py  grpc_server.py  repository.py
src/services/workflow_service/: __init__.py  main.py
src/services/workflow_service/saga/: __init__.py  workflows.py
